build: downgrade compile and target sdk to 30, to test CI